--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,15 @@
-title: translating-for-raspberry-pi-corporate
+title: Translating for the Raspberry Pi Foundation
 hero_image: images/banner.png
-description: translating-for-raspberry-pi-corporate description
+description: getting-started-with-translation description
 version: 4
 listed: false
 copyedit: false
-last_tested: "2019-06-03"
+last_tested: "2019-01-23"
 steps:
   - title: Introduction
-  - title: Step title
-  - title: What next?
+  - title: What we translate
+  - title: Workflow
+  - title: Tools
+  - title: Support
+  - title: Recognition scheme
+  - title: Next steps
