--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,15 +1,18 @@
+---
 title: Translating for the Raspberry Pi Foundation
 hero_image: images/banner.png
 description: getting-started-with-translation description
 version: 4
 listed: false
 copyedit: false
-last_tested: "2019-01-23"
+last_tested: '2019-01-23'
 steps:
-  - title: Introduction
-  - title: What we translate
-  - title: Workflow
-  - title: Tools
-  - title: Support
-  - title: Recognition scheme
-  - title: Next steps
+- title: Introduction
+  completion: engaged
+- title: What we translate
+- title: Workflow
+- title: Tools
+- title: Support
+- title: Recognition scheme
+  completion: internal
+- title: Next steps
